# -EnvGuard

./: README.md  pyproject.toml
configs/: rules.yaml
src/envguard/: __main__.py  cli.py  config.py  logger.py  paths.py
src/envguard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/envguard/checks/: __init__.py  base.py  disk.py  docker.py  ports.py
src/envguard/cmd/: __init__.py  main.py
src/envguard/core/: __init__.py  engine.py
src/envguard/fixes/: __init__.py  base.py  disk.py  docker.py  ports.py
